--- a/backend/package.json
+++ b/backend/package.json
@@ -6,5 +6,9 @@
     "functions/recipes-api",
     "functions/foods-api",
     "functions/nutrition-match-api"
-  ]
+  ],
+  "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.879.0",
+    "@aws-sdk/lib-dynamodb": "^3.879.0"
+  }
 }
